tests/fail/03_no_main.lang
// ОЖИДАЕТСЯ ОШИБКА: точка входа 'начало' не найдена
функция тест() : целое {
    вернуть 1;
}
// Ошибка рантайма: Точка входа 'Начало' не найдена
